# Riso_Print-S-Android

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  README  archive.sh
Android/: .classpath  .cproject  .gitignore  .project  AndroidManifest.xml  ant.properties  build.gradle  build.xml  custom_rules.xml  gradle.properties  lint.xml  proguard-project.txt  sda.doxyfile  settings.gradle  version.txt
Android/app/: build.gradle  coverage.gradle  google-services.json  lint.xml  proguard-project.txt
Android/assets/: printsettings.xml
Android/fastlane/: Appfile  Fastfile  README.md  report.xml
Android/ipp-client-kotlin/: build.gradle.kts
Android/jni/: Android.mk  Application.mk  CommonAPI.i  CommonAPI_wrap.cpp
Android/libs/: Android.cpp
Android/scanlibrary/: build.gradle
Android/storefiles/: smartdeviceapp.keystore
Android/tests/: .classpath  .project  AndroidManifest.xml  build.xml
CommonAPI/include/: CommonAPI.h  DirectPrint.h  SNMP_Manager.h
CommonLibrary/: .gitignore  Android.mk  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  unittester.sh
CommonLibrary/gtest/: gtest-all.cc
CommonLibrary/include/: common.h
CommonLibrary/src/: directprint.c  printsettings.c  printsettings.h  printsettings_ft.c  printsettings_fw.c  printsettings_gd.c  printsettings_gl.c  printsettings_lio.c  printsettings_rag.c  snmp.c  util.c
CommonLibrary/standalone/: snmpsample.c  wininet_ntoa.c
CommonLibrary/tests/: directprint_test.cpp  printsettings_test.cpp  snmp_test.cpp  util_test.cpp
WindowsRT/: .gitignore  SmartDeviceApp.sln
iOS/: .gitignore  doc.doxyfile
(+2086 files in other folders)
